--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "find-yarn-workspace-root": "^2.0.0"
+    "find-yarn-workspace-root": "^2.0.0",
+    "prettier": "^2.3.2"
   }
 }
