--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es2019"
-    ],
+    "lib": ["es2019"],
     "module": "commonjs",
     "target": "es2019",
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
