--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "scripts": {
     "start": "npx ts-node src/server.ts",
+    "prod": "npx ts-node src/server.ts --tranpileOnly",
     "debug": "node --inspect -r ts-node/register server.ts"
   },
   "dependencies": {
